add vpn related feature

--- a/htmlTemplates/index.html
+++ b/htmlTemplates/index.html
@@ -6,6 +6,7 @@
         <a href="./addNeighbor">add neighbor</a><br/>
         <a href="./addRoute">add route</a><br/>
         <a href="./addRouteTakusan">add route takusan</a><br/>
+        <a href="./addVpnConnection">add vpn</a><br/>
         <a href="./chechVPNstatus">check vpn</a><br/>
     </body>
 </html>
